fix yarn, openstack type in instance template